navbar på alle sider

--- a/index.html
+++ b/index.html
@@ -3,10 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Radar</title>
+    <link rel="icon" type="image/x-icon" href="../logo/fav.ico"/>
 </head>
 <body>
-
+<!-- navbar -->
+<nav class="navbar">
+    <article class="logo">
+        <a href="index.html" title="Til forsiden">
+            <img src="../img/logo/radar-logo.png" alt="Pink Radar logo">
+        </a>
+    </article>
+    <input type="checkbox" id="menu-toggle" class="menu-checkbox">
+    <!-- Mobil menu ikon -->
+    <label for="menu-toggle" class="menu-icon">☰</label>
+    <ul class="nav-links">
+        <li><a href="../html/events.html" title="Se kommende events">Events</a></li>
+        <li><a href="../html/info.html" title="Praktisk information">Information</a></li>
+        <li><a href="../html/billet-shop.html" title="Køb billetter eller shop">Billet/Shop</a></li>
+        <li><a href="../html/medlem.html" title="Bliv medlem">Medlemskab</a></li>
+    </ul>
+</nav>
     
     
 </body>
