favicon virker, radar ikon footer linker til index

--- a/html/info.html
+++ b/html/info.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Information</title>
-    <link rel="icon" type="image/x-icon" href="../logo/fav.ico"/>
+    <link rel="icon" href="../img/logo/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <!-- navbar -->
@@ -34,7 +34,9 @@
     <section class="footer">
     <!-- footer img -->
         <section class="footer-img">
-            <img class="radar-logo" src="img/logo/radar-logo.png" alt="Pink Radar logo">
+            <a href="../index.html">
+                <img class="radar-logo" src="../img/logo/radar-logo.png" alt="Pink Radar logo">
+            </a>
         </section>
     <!-- footer kontakt -->
         <section class="kontakt">
