--- a/html/billet-shop.html
+++ b/html/billet-shop.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Radar – Dit intime spillested for livekoncerter og unik musikoplevelse.">
 
     <title>Billet/Shop</title>
-    <link rel="icon" type="image/x-icon" href="../logo/fav.ico"/>
+    <link rel="icon" href="../img/logo/favicon.ico" type="image/x-icon">
 </head>
 <body>
     
@@ -36,7 +36,9 @@
     <section class="footer">
     <!-- footer img -->
         <section class="footer-img">
-            <img class="radar-logo" src="img/logo/radar-logo.png" alt="Pink Radar logo">
+            <a href="../index.html">
+                <img class="radar-logo" src="../img/logo/radar-logo.png" alt="Pink Radar logo">
+            </a>
         </section>
     <!-- footer kontakt -->
         <section class="kontakt">
