meta discription på alle sider, link til footer og nav css

--- a/html/medlem.html
+++ b/html/medlem.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Radar – Dit intime spillested for livekoncerter og unik musikoplevelse.">
     <title>Medlemskab</title>
     <link rel="icon" href="../img/logo/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
     <!-- navbar -->
