--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="../img/logo/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/styles.css">
 
 
 </head>
@@ -23,12 +24,19 @@
     <!-- Mobil menu ikon -->
     <label for="menu-toggle" class="menu-icon">☰</label>
     <ul class="nav-links">
-        <li><a href="../html/events.html" title="Se kommende events">Events</a></li>
-        <li><a href="../html/info.html" title="Praktisk information">Information</a></li>
-        <li><a href="../html/billet-shop.html" title="Køb billetter eller shop">Billet/Shop</a></li>
-        <li><a href="../html/medlem.html" title="Bliv medlem">Medlemskab</a></li>
+        <li class="link"><a href="../html/events.html" title="Se kommende events">Events</a></li>
+        <li class="link"><a href="../html/info.html" title="Praktisk information">Information</a></li>
+        <li class="link"><a href="../html/billet-shop.html" title="Køb billetter eller shop">Billet/Shop</a></li>
+        <li class="link"><a href="../html/medlem.html" title="Bliv medlem">Medlemskab</a></li>
     </ul>
 </nav>
+
+<section class="seperator">
+<article>
+    <h3>jhbgoluwb</h3>
+    <p>kajsglarbgæ</p>
+</article>
+</section>
 
 
 
