--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </article>
     <input type="checkbox" id="menu-toggle" class="menu-checkbox">
     <!-- Mobil menu ikon -->
-    <label for="menu-toggle" class="menu-icon">☰</label>
+    <label for="menu-toggle" class="menu-icon" aria-label="Åbn menu">☰</label>
     <ul class="nav-links">
         <li class="link"><a href="../html/events.html" title="Se kommende events">Events</a></li>
         <li class="link"><a href="../html/info.html" title="Praktisk information">Information</a></li>
