billeder html/css index

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/index.css">
 
 
 </head>
@@ -31,11 +32,18 @@
     </ul>
 </nav>
 
-<section class="seperator">
-<article>
-    <h3>jhbgoluwb</h3>
-    <p>kajsglarbgæ</p>
-</article>
+<section class="img-banner">
+  <figure class="banner-img">
+    <img src="img/rock-hands.jpg" alt="band som spiller, med puplikum der laver rock-hands">
+  </figure>
+
+  <figure class="banner-img">
+    <img src="img/red.jpg" alt="billede af puplikum i rød lighting">
+  </figure>
+  
+  <figure class="banner-img">
+    <img src="img/artist-playing.jpg" alt="billede af sangeren med puplikum i forgrunden">
+  </figure>
 </section>
 
 
