bliv medlem knap

--- a/html/billet-shop.html
+++ b/html/billet-shop.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="../img/logo/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/nav.css">
+    <link rel="stylesheet" href="../css/billet-shop.css">
 </head>
 <body>
     
@@ -28,7 +29,15 @@
         <li><a href="medlem.html" title="Bliv medlem">Medlemskab</a></li>
     </ul>
 </nav>
-    
+
+<!-- bliv medlem knap -->
+
+<section class="medlemskab">
+  <hr class="line">
+  <button class="bliv-medlem" onclick="window.location.href='../html/medlem.html';">BLIV MEDLEM</button>
+  <hr class="line">
+</section>
+
 
 <!-- footer -->
 <footer>
