--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     </ul>
 </nav>
 
+<!-- tre billeder -->
+
 <section class="img-banner">
   <figure class="banner-img">
     <img src="img/rock-hands.jpg" alt="band som spiller, med puplikum der laver rock-hands">
@@ -46,7 +48,13 @@
   </figure>
 </section>
 
+<!-- bliv medlem knap -->
 
+<section class="medlemskab">
+  <hr class="line">
+  <button class="bliv-medlem" onclick="window.location.href='../html/medlem.html';">BLIV MEDLEM</button>
+  <hr class="line">
+</section>
 
 
 <!-- footer -->
