--- a/html/info.html
+++ b/html/info.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="../img/logo/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/nav.css">
+    <link rel="stylesheet" href="../css/info.css">
 </head>
 <body>
     <!-- navbar -->
@@ -28,6 +29,16 @@
     </ul>
 </nav>
     
+<section class="img-banner">
+  <figure class="banner-img">
+    <img src="../img/drawing-guitar.jpg" alt="illustration af en mand med afro der spiller guitar, som er lavet med farverigt lineart">
+  </figure>
+
+  <figure class="banner-img">
+    <img src="../img/drawing-drums.jpg" alt="illustration af en mand der spiller trummer, som er lavet med farverigt lineart">
+  </figure>
+</section>
+
 
 
 <!-- footer -->
