--- a/html/info.html
+++ b/html/info.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/info.css">
+    
 </head>
 <body>
     <!-- navbar -->
@@ -29,6 +30,8 @@
     </ul>
 </nav>
     
+<!-- to billeder til "banner" -->
+
 <section class="img-banner">
   <figure class="banner-img">
     <img src="../img/drawing-guitar.jpg" alt="illustration af en mand med afro der spiller guitar, som er lavet med farverigt lineart">
@@ -39,6 +42,13 @@
   </figure>
 </section>
 
+
+<!-- bliv medlem knap -->
+<section class="medlemskab">
+  <hr class="line">
+  <button class="bliv-medlem" onclick="window.location.href='../html/medlem.html';">BLIV MEDLEM</button>
+  <hr class="line">
+</section>
 
 
 <!-- footer -->
