--- a/index.html
+++ b/index.html
@@ -57,6 +57,55 @@
 </section>
 
 
+<!-- info bokse -->
+
+<section class="infobox">
+  <article class="box">
+    <figure>
+      <a href="../html/events.html">
+    <img src="img/logo/udraabstegn-logo.png" alt="udraabstegn" class="icon" />
+      </a>
+  </figure>
+    <h3>Events</h3>
+    <p>
+      Oplev Aarhus' kreative puls på Radar! Intime koncerter, 
+      upcoming artister og unikke kultur-events venter på dig. 
+      Tjek programmet og book billetter nu!
+    </p>    
+  </article>
+
+  <article class="box">
+    <figure>
+      <a href="../html/info.html">
+    <img src="img/logo/sporgsmaal-logo.png" alt="spørgsmaalstegn" class="icon" />
+      </a>
+    </figure>
+    <h3>Information</h3>
+    <p>
+      Radar er Aarhus’ hotspot for alternativ musik og kunst! 
+      Kendt for sin intime atmosfære og fokus på upcoming talenter,
+      skaber Radar unikke oplevelser i hjertet af byens kreative miljø. 
+    </p>
+  </article>
+
+  <article class="box">
+    <figure>
+      <a href="../html/billet-shop.html">
+    <img src="img/logo/node-logo.png" alt="musiknode" class="icon" />
+      </a>
+    </figure>
+    <h3>Billet/Shop</h3>
+    <p>
+      Sikr dig adgang til unikke oplevelser på Radar!
+      Køb billetter til intime koncerter og kulturelle
+      events direkte via vores shop. 
+      Støt upcoming talenter og bliv en del af Aarhus’ kreative puls. 
+    </p>
+  </article>
+
+  
+
+
 <!-- footer -->
 <footer>
     <hr>
