medlems side css done maybe

--- a/html/medlem.html
+++ b/html/medlem.html
@@ -87,6 +87,39 @@
 </main>
 
 
+<section class="medlems-fordele">
+ <article class="fordele">
+<h1>Fordele for Medlemskab!</h1>
+
+<p>Bliv medlem hos Radar og få mere ud af musikken!</p>
+
+<p>Som medlem hos Radar får du en lang række fordele, 
+    der gør dine koncertoplevelser endnu bedre.</p>
+
+<h3>For Koncertgængere:</h3>
+<ul>
+  <li><strong>Særlige rabatter</strong> på billetter til koncerter og events.</li>
+  <li><strong>Eksklusiv adgang</strong> til pre-sales, så du kan sikre dig billetter før alle andre.</li>
+  <li>Invitationer til <strong>særlige medlemsarrangementer</strong> og sneak peeks på kommende events.</li>
+  <li><strong>Støt kulturen</strong>, Dit medlemskab går direkte til at støtte lokale og upcoming artister samt eksperimenterende kunst.</li>
+</ul>
+
+<h3>For Artister:</h3>
+<ul>
+  <li>Mulighed for at blive en del af et stærkt kreativt netværk.</li>
+  <li>Særlig eksponering gennem Radars platforme og events.</li>
+  <li>Muligheder for at eksperimentere med koncertformater og samarbejde på tværs af kunstarter.</li>
+</ul>
+
+<p>Med et medlemskab hos Radar er du ikke kun med til at styrke Aarhus’
+   musik- og kunstscene – du får også adgang til unikke oplevelser,
+   der gør hver koncert noget særligt.</p>
+
+<p>Gør en forskel og få mere med Radar!</p>
+ </article>
+</section>
+
+
     
 
 
