info side done maybe

--- a/html/info.html
+++ b/html/info.html
@@ -29,7 +29,8 @@
         <li><a href="medlem.html" title="Bliv medlem">Medlemskab</a></li>
     </ul>
 </nav>
-    
+
+   
 <!-- to billeder til "banner" -->
 
 <section class="img-banner">
@@ -48,6 +49,93 @@
   <hr class="line">
   <button class="bliv-medlem" onclick="window.location.href='../html/medlem.html';">BLIV MEDLEM</button>
   <hr class="line">
+</section>
+
+
+
+<!-- Profil -->
+
+<section class="profil-section">
+  <section class="udraabstegn-logo">
+  <figure class="udraabstegn">
+    <img src="../img/logo/udraabstegn-logo.png" alt="udraabstegn" class="icon">
+  </figure>
+</section>
+
+  <article class="Profil-tekst">
+    <h1 class="h1-profil">Profil</h1>
+
+    <p class="p-profil">På Radar præsenterer vi et bredt udvalg af musikgenrer med både lokale,
+       nationale og internationale artister. Vi har altid et særligt fokus på
+       det eksperimenterende, det alternative og nichegenrer.
+       Radar interesserer sig for krydsfelterne mellem musik og andre
+       kunstarter samt for at eksperimentere med koncert- og præsentationsformater.</p>
+
+    <p class="p-profil">Radar er et åbent, netværksskabende og inkluderende spillested, hvor vi
+       lægger stor vægt på samarbejde med aktører i genrespecifikke miljøer og
+       på inddragelse af eksterne koncert- og festivalarrangører.
+       Desuden arbejder vi på Radar med udviklingsaktiviteter, der
+       retter sig mod programudvikling og publikumsudvikling. 
+       Aktiviteterne resulterer i en række projekter og arbejdsmetoder
+       som f.eks. #venuehack, Radar_HIGH, Radar_MusicLab, børnekoncerter,
+       det fleksible koncertrum og AudioCanvas.</p>
+  </article>
+</section>
+
+<!-- 2 infobokse -->
+
+<section class="infobox">
+  <article class="box">
+    <h3>Udlejning af Radars sal til virksomheder og organisationer</h3>
+
+    <p>Radar i Aarhus tilbyder udlejning af vores centralt beliggende
+      lokaler til en bred vifte af arrangementer:
+      showcases, foredrag, firmafester, videooptagelser, m.m.
+      Salen har plads til 300 stående eller 100 siddende (biografopsætning)
+      og inkluderer moderne faciliteter som lyd-/lysudstyr, projektor, lærred,
+      tekniker, barpersonale og slutrengøring.</p>
+
+      <p>kontakt os for mere info!</p>
+
+
+  </article>
+
+  <article class="box">
+    <h3>Bliv Frivillig på Radar</h3>
+
+    <p>Radar er et spillested, hvor fællesskab og musik er i fokus.
+      Med ca. 38 frivillige er de afgørende for, at koncerterne kan afvikles.
+      Som frivillig kan du arbejde i baren, entreen, garderoben
+      eller med lys og foto.
+      Du skal være mindst 20 år og have interesse for kultur.
+      Til gengæld får du bl.a. gratis koncertadgang, rabatter og sociale arrangementer.
+      Bliv en del af vores fællesskab.</p>
+
+      <p>kontakt os for mere info!</p>
+  </article>
+</section>
+
+<!-- infografik -->
+
+<section class="infografik">
+  <section class="baggrund">
+  <figure class="info-plade">
+    <img src="../img/logo/infografik-farver.png" alt="infografik, der viser musikgenre" class="plade">
+  </figure>
+
+  <article class="infografik-tekst">
+    <figure class="node-logo">
+      <img src="../img/logo/node-logo.png" alt="node logo" class="logo-node">
+    </figure>
+
+    <h1>Find din musikstil</h1>
+    <p>Farverne her repræsenterer forskellige musikgenre fra rytmisk
+      hip-hop til tidsløs klassisk musik.</p>
+
+    <p>hver farve matcher stemningen og energien i genren.</p>
+    <p>Hvilken stil passer dig?</p>
+  </article>
+  </section>
 </section>
 
 
