--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <article class="box">
     <figure>
       <a href="../html/info.html">
-    <img src="img/logo/sporgsmaal-logo.png" alt="spørgsmaalstegn" class="icon" />
+    <img src="img/logo/sporgsmaal-logo.png" alt="sporgsmaalstegn" class="icon" />
       </a>
     </figure>
     <h3>Information</h3>
