billeder på events

--- a/html/events.html
+++ b/html/events.html
@@ -36,7 +36,7 @@
   </figure>
 
   <figure class="banner-img">
-    <img src="../img/drawing-guitar.jpg" alt="illustration af en man med afro der spiller guitar, som er lavet med farverigt lineart">
+    <img src="../img/drawing-guitar.jpg" alt="illustration af en mand med afro der spiller guitar, som er lavet med farverigt lineart">
   </figure>
   
   <figure class="banner-img">
@@ -50,6 +50,35 @@
   <hr class="line">
   <button class="bliv-medlem" onclick="window.location.href='../html/medlem.html';">BLIV MEDLEM</button>
   <hr class="line">
+</section>
+
+
+<!-- billeder af koncerter/ tegninger -->
+
+<section class="koncerter">
+  <figure class="koncert-img">
+    <img src="../img/artist-playing.jpg" alt="koncert helt tæt på artisterne">
+  </figure>
+
+  <figure class="koncert-img">
+    <img src="../img/red.jpg" alt="billede af puplikum i rød lighting">
+  </figure>
+
+  <figure class="koncert-img">
+    <img src="../img/drawing-drums.jpg" alt="illustration af en mand med der spiller trummer, som er lavet med farverigt lineart">
+  </figure>
+
+  <figure class="koncert-img">
+    <img src="../img/drawing-guitar.jpg" alt="illustration af en mand med afro der spiller guitar, som er lavet med farverigt lineart">
+  </figure>
+
+  <figure class="koncert-img">
+    <img src="../img/rock-hands.jpg" alt="koncert med puplikum der laver rock-hands">
+  </figure>
+
+  <figure class="koncert-img">
+    <img src="../img/artist-closeup.jpg" alt="billede af sanger tæt på,">
+  </figure>
 </section>
 
 
