--- a/html/billet-shop.html
+++ b/html/billet-shop.html
@@ -38,6 +38,16 @@
   <hr class="line">
 </section>
 
+<!-- velkommen til radar -->
+
+<section class="velkommen">
+  <h1>    Velkommen til Radar!  </h1>
+  <p>Her kan du se billetpriserne til vores arrangementer,
+    medlemsfordele og information om gratis adgang for frivillige.
+  </p>
+</section>
+
+
 
 <!-- footer -->
 <footer>
