--- a/html/billet-shop.html
+++ b/html/billet-shop.html
@@ -48,6 +48,47 @@
 </section>
 
 
+<!-- husk -->
+
+
+
+
+
+
+
+
+
+<!-- køb -->
+
+<section class="køb-plakat">
+  <article class="køb">
+    <h2>150 kr</h2>
+    <figure class="plakat">
+    <img src="../img/drawing-guitar.jpg" alt="illustration af en mand med afro der spiller guitar, som er lavet med farverigt lineart">
+    </figure>  
+    <p>Eksklusive Radar plakat</p>
+    <button class="kob">KØB</button>
+  </article>
+
+  <article class="køb">
+    <h2>150 kr</h2>
+    <figure class="plakat">
+    <img src="../img/drawing-jazz.jpg" alt="mand der spiller trumpet, tegning">
+    </figure>  
+    <p>Eksklusive Radar plakat</p>
+    <button class="kob">KØB</button>
+  </article>
+
+  <article class="køb">
+    <h2>150 kr</h2>
+    <figure class="plakat">
+      <img src="../img/drawing-drums.jpg" alt="illustration af en mand der spiller trummer, som er lavet med farverigt lineart">
+    </figure>  
+    <p>Eksklusive Radar plakat</p>
+    <button class="kob">KØB</button>
+  </article>
+</section>
+
 
 <!-- footer -->
 <footer>
