--- a/html/billet-shop.html
+++ b/html/billet-shop.html
@@ -45,18 +45,62 @@
   <p>Her kan du se billetpriserne til vores arrangementer,
     medlemsfordele og information om gratis adgang for frivillige.
   </p>
+
+  <!-- hr -->
+  <hr class="dotted-line">
 </section>
+ 
 
 
-<!-- husk -->
+<section class="pris-box">
+  <section class="pris-section">
+  <article>
+    <h2>Billet-priser</h2>
+    <ul>
+      <li>Stårende plads: 150 kr.</li>
+      <li>Siddende plads: 180 kr.</li>
+      <li>Front row: 220 kr.</li>
+    </ul>
+  </article>
 
+  <article>
+    <h2>Medlems-priser</h2>
+    <ul>
+      <li>Stårende plads: 130 kr.</li>
+      <li>Siddende plads: 160 kr.</li>
+      <li>Front row: 190 kr.</li>
+    </ul>
+  </article>
+  </section>
 
+  <section class="medlem-priser">
+    <article class="pris-article">
+      <h2>Medlemskab:</h2>
+      <ul>
+        <li>Basismedlemskab - 50kr./måned</li>
+        <li>Premium Medlemskab - 100kr./måned</li>
+        <li>VIP Medlemskab - 200kr./måned</li>
+      </ul>    
+      <a href="404.html">
+        <button class="kob-billet">KØB BILLET</button>
+      </a>
+    </article>
+  </section>
 
-
-
-
-
-
+  <section class="gratis">
+    <article class="frivillig">
+      <h2>Gratis adgang for frivillige</h2>
+      <p>Som frivillig på Radar får du gratis adgang til alle vores koncerter.</p>
+      <h3>Derudover får du også:</h3>
+      <ul>
+        <li>Rabatter i baren.</li>
+        <li>Mulighed for gæstelistepladser til dine venner.</li>
+        <li>Gæstelister hos vores samarbejdspartnere.</li>
+      </ul>
+    </article>
+  </section>  
+</section>
+  
 
 <!-- køb -->
 
@@ -67,7 +111,9 @@
     <img src="../img/drawing-guitar.jpg" alt="illustration af en mand med afro der spiller guitar, som er lavet med farverigt lineart">
     </figure>  
     <p>Eksklusive Radar plakat</p>
-    <button class="kob">KØB</button>
+    <a href="404.html">
+      <button class="kob">KØB</button>
+    </a>
   </article>
 
   <article class="køb">
@@ -76,7 +122,9 @@
     <img src="../img/drawing-jazz.jpg" alt="mand der spiller trumpet, tegning">
     </figure>  
     <p>Eksklusive Radar plakat</p>
-    <button class="kob">KØB</button>
+    <a href="404.html">
+      <button class="kob">KØB</button>
+    </a>
   </article>
 
   <article class="køb">
@@ -85,9 +133,13 @@
       <img src="../img/drawing-drums.jpg" alt="illustration af en mand der spiller trummer, som er lavet med farverigt lineart">
     </figure>  
     <p>Eksklusive Radar plakat</p>
-    <button class="kob">KØB</button>
+    <a href="404.html">
+      <button class="kob">KØB</button>
+    </a>
   </article>
 </section>
+
+
 
 
 <!-- footer -->
@@ -102,7 +154,7 @@
           </a>
         </figure>
       </div>
-      
+
       <!-- Tekstsektioner -->
       <section class="footer-text">
         <h3 class="footer-h3">Kontakt</h3>
@@ -125,7 +177,6 @@
       </section>
     </section>
   </footer>
-    
 
 </body>
 </html>
