--- a/html/events.html
+++ b/html/events.html
@@ -80,20 +80,20 @@
         <article class="dag">
           <time class="dato">1</time>
           <img src="../img/logo/rock-logo.png" alt="Koncert" class="begivenhed-ikon">
-          <section class="begivenhed-info">Flyshow kl. 15:00</section>
+          <a href="../html/404.html"><section class="begivenhed-info">Flyshow kl. 15:00</section></a>
         </article>
         <article class="dag">2</article>
         <article class="dag">
             <time class="dato">3</time>
             <img src="../img/logo/hip-hop-logo.png" alt="Koncert" class="begivenhed-ikon">
-            <section class="begivenhed-info">Flyshow kl. 15:00</section>
+            <a href="../html/404.html"><section class="begivenhed-info">Flyshow kl. 15:00</section></a>
         </article>
         <article class="dag">4</article>
         <article class="dag">5</article>
         <article class="dag">
             <time class="dato">6</time>
             <img src="../img/logo/rock-logo.png" alt="Koncert" class="begivenhed-ikon">
-            <section class="begivenhed-info">Koncert kl. 20:00</section>
+            <a href="../html/404.html"><section class="begivenhed-info">Koncert kl. 20:00</section></a>
         </article>
         <article class="dag">7</article>
 
@@ -102,20 +102,20 @@
         <article class="dag">
             <time class="dato">9</time>
             <img src="../img/logo/country-logo.png" alt="Koncert" class="begivenhed-ikon">
-            <section class="begivenhed-info">Flyshow kl. 15:00</section>
+            <a href="../html/404.html"><section class="begivenhed-info">Flyshow kl. 15:00</section></a>
         </article>
         <article class="dag">10</article>
         <article class="dag">11</article>
         <article class="dag">
           <time class="dato">12</time>
           <img src="../img/logo/edm-logo.png" alt="Koncert" class="begivenhed-ikon">
-          <section class="begivenhed-info">Koncert kl. 20:00</section>
+          <a href="../html/404.html"><section class="begivenhed-info">Koncert kl. 20:00</section></a>
         </article>
         <article class="dag"><time class="dato">13</time></article>
         <article class="dag">
           <time class="dato">14</time>
           <img src="../img/logo/jazz-logo.png" alt="Koncert" class="begivenhed-ikon">
-          <section class="begivenhed-info">Koncert kl. 20:00</section>
+          <a href="../html/404.html"><section class="begivenhed-info">Koncert kl. 20:00</section></a>
         </article>
 
         <!-- 14 - 21 -->
@@ -123,13 +123,13 @@
         <article class="dag">
             <time class="dato">16</time>
             <img src="../img/logo/hip-hop-logo.png" alt="Koncert" class="begivenhed-ikon">
-            <section class="begivenhed-info">Flyshow kl. 15:00</section>
+            <a href="../html/404.html"><section class="begivenhed-info">Flyshow kl. 15:00</section></a>
         </article>
         <article class="dag">17</article>
         <article class="dag">
           <time class="dato">18</time>
           <img src="../img/logo/klassisk-logo.png" alt="Koncert" class="begivenhed-ikon">
-          <section class="begivenhed-info">Koncert kl. 20:00</section>
+          <a href="../html/404.html"><section class="begivenhed-info">Koncert kl. 20:00</section></a>
         </article>
         <article class="dag">19</article>
         <article class="dag">20</article>
@@ -139,24 +139,24 @@
         <article class="dag">
           <time class="dato">22</time>
           <img src="../img/logo/pop-logo.png" alt="Koncert" class="begivenhed-ikon">
-          <section class="begivenhed-info">Flyshow kl. 15:00</section>
+          <a href="../html/404.html"><section class="begivenhed-info">Flyshow kl. 15:00</section></a>
         </article>
         <article class="dag"><time class="dato">23</time></article>
         <article class="dag">
           <time class="dato">24</time>
           <img src="../img/logo/hip-hop-logo.png" alt="Koncert" class="begivenhed-ikon">
-          <section class="begivenhed-info">Flyshow kl. 15:00</section>
+          <a href="../html/404.html"><section class="begivenhed-info">Flyshow kl. 15:00</section></a>
         </article>
         <article class="dag">25</article>
         <article class="dag">
           <time class="dato">26</time>
           <img src="../img/logo/edm-logo.png" alt="Koncert" class="begivenhed-ikon">
-          <section class="begivenhed-info">Koncert kl. 20:00</section>
+          <a href="../html/404.html"><section class="begivenhed-info">Koncert kl. 20:00</section></a>
         </article>
         <article class="dag">
             <time class="dato">27</time>
             <img src="../img/logo/rock-logo.png" alt="Koncert" class="begivenhed-ikon">
-            <section class="begivenhed-info">Koncert kl. 20:00</section>
+            <a href="../html/404.html"><section class="begivenhed-info">Koncert kl. 20:00</section></a>
         </article>
         <article class="dag">28</article>
 
@@ -166,7 +166,7 @@
         <article class="dag">
             <time class="dato">31</time>
             <img src="../img/logo/hip-hop-logo.png" alt="Koncert" class="begivenhed-ikon">
-            <section class="begivenhed-info">Flyshow kl. 15:00</section>
+            <a href="../html/404.html"><section class="begivenhed-info">Flyshow kl. 15:00</section></a>
         </article>
         <article class="dag"></article>
         <article class="dag"></article>
