rettet errors i html

--- a/html/billet-shop.html
+++ b/html/billet-shop.html
@@ -81,9 +81,7 @@
         <li>Premium Medlemskab - 100kr./måned</li>
         <li>VIP Medlemskab - 200kr./måned</li>
       </ul>    
-      <a href="404.html">
-        <button class="kob-billet">KØB BILLET</button>
-      </a>
+      <button class="kob-billet" onclick="window.location.href='404.html'">KØB BILLET</button>
     </article>
   </section>
 
@@ -111,9 +109,7 @@
     <img src="../img/drawing-guitar.jpg" alt="illustration af en mand med afro der spiller guitar, som er lavet med farverigt lineart">
     </figure>  
     <p>Eksklusive Radar plakat</p>
-    <a href="404.html">
-      <button class="kob">KØB</button>
-    </a>
+    <button class="kob-billet" onclick="window.location.href='404.html'">KØB BILLET</button>
   </article>
 
   <article class="køb">
@@ -122,9 +118,7 @@
     <img src="../img/drawing-jazz.jpg" alt="mand der spiller trumpet, tegning">
     </figure>  
     <p>Eksklusive Radar plakat</p>
-    <a href="404.html">
-      <button class="kob">KØB</button>
-    </a>
+    <button class="kob-billet" onclick="window.location.href='404.html'">KØB BILLET</button>
   </article>
 
   <article class="køb">
@@ -133,9 +127,7 @@
       <img src="../img/drawing-drums.jpg" alt="illustration af en mand der spiller trummer, som er lavet med farverigt lineart">
     </figure>  
     <p>Eksklusive Radar plakat</p>
-    <a href="404.html">
-      <button class="kob">KØB</button>
-    </a>
+    <button class="kob-billet" onclick="window.location.href='404.html'">KØB BILLET</button>
   </article>
 </section>
 
