optimering af siderne med loading="lazy" på billeder plus resten af css

--- a/html/info.html
+++ b/html/info.html
@@ -16,7 +16,7 @@
 <nav class="navbar">
     <article class="logo">
         <a href="../index.html" title="Til forsiden">
-            <img src="../img/logo/radar-logo.webp" alt="Pink Radar logo">
+            <img src="../img/logo/radar-logo.webp" alt="Pink Radar logo" loading="lazy">
         </a>
     </article>
     <input type="checkbox" id="menu-toggle" class="menu-checkbox">
@@ -35,11 +35,11 @@
 
 <section class="img-banner">
   <figure class="banner-img">
-    <img src="../img/drawing-guitar.webp" alt="illustration af en mand med afro der spiller guitar, som er lavet med farverigt lineart">
+    <img src="../img/drawing-guitar.webp" alt="illustration af en mand med afro der spiller guitar, som er lavet med farverigt lineart" loading="lazy">
   </figure>
 
   <figure class="banner-img">
-    <img src="../img/drawing-drums.webp" alt="illustration af en mand der spiller trummer, som er lavet med farverigt lineart">
+    <img src="../img/drawing-drums.webp" alt="illustration af en mand der spiller trummer, som er lavet med farverigt lineart" loading="lazy">
   </figure>
 </section>
 
@@ -58,7 +58,7 @@
 <section class="profil-section">
   <section class="udraabstegn-logo">
   <figure class="udraabstegn">
-    <img src="../img/logo/udraabstegn-logo.webp" alt="udraabstegn" class="icon">
+    <img src="../img/logo/udraabstegn-logo.webp" alt="udraabstegn" class="icon" loading="lazy">
   </figure>
 </section>
 
@@ -120,12 +120,12 @@
 <section class="infografik">
   <section class="baggrund">
   <figure class="info-plade">
-    <img src="../img/logo/infografik-farver.webp" alt="infografik, der viser musikgenre" class="plade">
+    <img src="../img/logo/infografik-farver.webp" alt="infografik, der viser musikgenre" class="plade" loading="lazy">
   </figure>
 
   <article class="infografik-tekst">
     <figure class="node-logo">
-      <img src="../img/logo/node-logo.webp" alt="node logo" class="logo-node">
+      <img src="../img/logo/node-logo.webp" alt="node logo" class="logo-node" loading="lazy">
     </figure>
 
     <h1>Find din musikstil</h1>
@@ -147,7 +147,7 @@
       <div class="footer-logo">
         <figure class="footer-img">
           <a href="../index.html">
-            <img class="radar-logo" src="../img/logo/radar-logo.webp" alt="Pink Radar logo">
+            <img class="radar-logo" src="../img/logo/radar-logo.webp" alt="Pink Radar logo" loading="lazy">
           </a>
         </figure>
       </div>
