sidste rettelser og validering

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="icon" href="../img/logo/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/nav.css">
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/index.css">
 
 
@@ -102,6 +101,7 @@
       Støt upcoming talenter og bliv en del af Aarhus’ kreative puls. 
     </p>
   </article>
+</section>
 
   
 
